--- a/index.html
+++ b/index.html
@@ -8,11 +8,25 @@
         <title>HTML introduction</title>
         <!-- Кодировка страницы -->
         <meta http-equiv="Content type" content="text/html;charset=UTF-8" />
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     </head>
     <!-- Отображаемое тело страницы -->
     <body>
         <h1>Portfolio</h1>
-        <img src="img/3-4-.jpg" alt="">
+        <br>
+        <br>
+        <div class="rotate-block">
+            <div class="change-img">
+              <div class="front-side-img"><img src="img/3-4--removebg-preview.png" alt=""/></div>
+              <div class="back-side-img"><img src="img/3-4--removebg-preview.png" alt=""/></div>
+            </div>
+          </div>
+          <br>
+          <br>
+          <br>
         <h2>Resume</h2>
         <p>Bayzak Zhumaev</p>
         <p>Phone number: 0776697940</p>
@@ -20,16 +34,27 @@
         <p>Current city: Bishkek</p>
         <p>Sex: male</p>
         <p>Education: International Alatoo university, faculty: com21</p>
-        <p>My name is Bayzak Zhumaev and I am 19 years old. In my free time, I enjoy playing basketball, football, watching educational videos from youtube, sometimes watching films. I am really into combat sports like judo, boxing, sambo. They are like my passion, I like to do them and watching them. I'm really interested in reading books of different genres. So what kind of person am I? I am usually happy, but sometimes I can be sad. 
-            I am a sociable, responsible, punctual, neat, calm guy. I take my work seriously.</p>
+        <p class="gg">My name is Bayzak Zhumaev and I am 19 years old. In my free time,<br>
+             I enjoy playing basketball, football, watching educational videos from youtube,<br>
+              sometimes watching films. I am really into combat sports like judo, boxing, sambo. <br> 
+              They are like my passion, I like to do them and watching them. I'm really interested in reading
+              <br> books of different genres. <br> 
+              So what kind of person am I? I am usually happy, but sometimes I can be sad. 
+            I am a sociable, responsible, punctual, neat, calm guy. 
+            <br>
+            I take my work seriously.</p>
         <h3>Skills</h3>
         <ol>
             <li>Python</li>
             <li>Project management</li>
         </ol>
         <h3>Site:</h3>
-        <a href="https://vk.com/bayzak1">VK page</a>
-        
+        <div class="knopochnaya-animatsiya">
+  <a href="https://vk.com/bayzak1"><button class="osnova-karkasa-1" type="button" >vk page</button></a>
+  
+
+</div>
+
    </body>
 </html>
 
